add changes in notebook

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <h1>Test-Repo</h1>
       </header>
       <main>
+        <p>ich befinde mich im neuen branch notebook</p>
        <p>jetzt werde ich etwas am notebook ändern und hochladen, dann am dektop etwas ändern und erst dann vom server abholen - das wird einen konfklikt geben</p> 
         <p>okay hat gefunzt - jetzt lade ich etwas vom desktop rechner hoch und danach werde ich einen konflikt auslösen</p>
         <p>das ist die erste änderung mit laptop</p>
